# src-cascades

./: README.md  pyproject.toml  setup.py
examples/: config.yml  config_inference.yml  run_from_config.py  sample_data.txt
src/src_cascades/: __init__.py  analysis.py  dynamics.py  inference.py  runner.py  simulator.py  solver.py
src/src_cascades.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/src_cascades/core/: simulator_backend.cpp  simulator_backend.h
tests/: conftest.py  test_analysis.py  test_distributions_and_dynamics.py  test_import_and_packaging.py  test_optional_backends.py  test_runner.py  test_simulator.py  test_solver.py
